-
Bug
-
Resolution: Done
-
Not Evaluated
-
Qt Creator 2.3.0
-
None
-
Qt Creator: Built on Jul 11 2011 at 01:15:14 From revision 3f61b60dd4
QtSDK1.1.2
Ubuntu10.10
sdktestround15
Reproduction steps:
1. Create a Qt Quick application.
2. Click the Analyzer button on the left bar.
3. Move the mouse over the start analyze button, shows "No active
project". But I have just create a new project. See button.png.
Unless I select another item in the analyze combo box, the start button is disabled.
- relates to
-
QTCREATORBUG-5357 "Start" button in analyze toolbar is not enabled/disabled when needed
-
- Closed
-
| For Gerrit Dashboard: QTCREATORBUG-5405 | ||||||
|---|---|---|---|---|---|---|
| # | Subject | Branch | Project | Status | CR | V |
| 1526,2 | analyzer: potential fix for not-up-to-date actions | 2.3 | qt-creator/qt-creator | Status: MERGED | +2 | 0 |