analyzer: potential fix for not-up-to-date actions

I cannot reproduce the issue locally. This removes a test whether
something has changed before updating the actions.

Change-Id: If32a7911a6b7ebde65d6dcd45d1eaae6a09933fa
Reviewed-by: con
Task-number: QTCREATORBUG-5405
Task-number: QTCREATORBUG-5357
Reviewed-on: http://codereview.qt.nokia.com/1526
Reviewed-by: Qt Sanity Bot <qt_sanity_bot@ovi.com>
Reviewed-by: Eike Ziller <eike.ziller@nokia.com>